k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trashtrack
  labels:
    app: smart-city-platform
    team: kelompok-6
