k8s/oauth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth
  namespace: trashtrack
  labels:
    app: oauth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth
  template:
    metadata:
      labels:
        app: oauth
    spec:
      containers:
        - name: oauth
          image: smart-city-platform-kel6-oauth-server:latest
          imagePullPolicy: IfNotPresent
          # Ganti image di atas dengan image oauth kalian yang sudah di-push
          ports:
            - containerPort: 3002
              name: http
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "300m"
          readinessProbe:
            httpGet:
              path: /health
              port: 3002
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3002
            initialDelaySeconds: 20
            periodSeconds: 20
            failureThreshold: 3
 
---
apiVersion: v1
kind: Service
metadata:
  name: oauth-service
  namespace: trashtrack
  labels:
    app: oauth
spec:
  type: ClusterIP
  selector:
    app: oauth
  ports:
    - port: 3002
      targetPort: 3002
      name: http
